# LianesMinecraftFront

./: .gitignore  README.md  index.html  package-lock.json  package.json  vercel.json  web.html
api/: auth.js  ruta.js
api/_lib/: http.js  password.js  token.js
api/auth/: _handler.js  start.js  stop.js
api/control/: _handler.js  start.js  stop.js
back_context/: .env.example  .gitignore  README.md  pyproject.toml
back_context/docs/: conf.py  deployment.rst  index.rst  modules.rst
back_context/src/minecraft_server_backend/: __init__.py  di.py  main.py
back_context/src/minecraft_server_backend/application/use_cases/: check_server_status.py  create_backup.py  ensure_daily_backup.py  retrieve_download_file.py  start_server.py  start_server_workflow.py  stop_server.py
back_context/src/minecraft_server_backend/config/: settings.py
back_context/src/minecraft_server_backend/domain/: exceptions.py
back_context/src/minecraft_server_backend/domain/services/: __init__.py  archive_service.py  backup_storage_service.py  server_manager.py
back_context/src/minecraft_server_backend/infrastructure/filesystem/: __init__.py  daily_backup_storage_service.py  zip_archive_service.py
back_context/src/minecraft_server_backend/infrastructure/process/: subprocess_server_manager.py
back_context/src/minecraft_server_backend/interfaces/http/: api.py
scripts/: app.js  config.js  httpClient.js
styles/: animations.css  base.css  control-buttons.css  control-card.css  info-overlay.css  main.css  modal.css  password-overlay.css  route-calculator.css  status.css  torch.css
(+95 files in other folders)
